<resources>
    <string name="app_name">My-First-Calculator</string>
    <string name="tv_screen_hint">insert values</string>
    <string name="btn_addition">+</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_multiplication">*</string>
    <string name="btn_division">/</string>
    <string name="btn_dot">.</string>
    <string name="btn_coma">,</string>
    <string name="btn_result">=</string>
    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
</resources>